# autonomous-mobile-robot

./: README.md  instructions.txt
mapping/: CMakeLists.txt  find_object_2d.ini  package.xml
mapping/config/: costmap_common_params.yaml  exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  rosbot_navigation.rviz  trajectory_planner.yaml
mapping/includes/: move_base.launch.xml
mapping/launch/: exploration.launch  findobject.launch  gazebo_robot_world.launch  gmapping.launch  path_planning.launch  pc2l.launch  recog_findobject.launch  rtab_and_exploration.launch  rtab_map_test.launch  teach_findobject.launch
mapping/src/: object_detection_follow.cpp  object_recognition.cpp  rotatecamera.cpp
mapping/worlds/: world2.world  world3.world
rosbot_description/: CMakeLists.txt
rosbot_description/config/: config.yaml
rosbot_description/launch/: rosbot_gazebo.launch
rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
rosbot_gazebo/launch/: maze_world.launch
rosbot_gazebo/worlds/: cafe.world  scene1.world  scene2_garage.world
src/task1/: CMakeLists.txt  package.xml
src/task1/launch/: pioneer3at_keyboard.launch  pioneer3at_kinect.launch  something.launch
src/task1/worlds/: .pioneer3dx_with_kinect.wbproj  pioneer3at_with_kinect.wbt
